--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,18 +1,20 @@
-<div class="w-64 mb-4 transition-transform transform hover:scale-105 ">
-  <div class="flex flex-col items-center bg-gray-100 border p-4 rounded shadow h-full">
-    <div class="mb-4">
-      <%= link_to task_path(task), class: 'no-underline' do %>
-        <h3 class="text-lg text-sky-600 font-semibold"><%= task.name %></h3>
-      <% end %>
-      <p class="text-gray-600"><%= task.description %></p>
-    </div>
-    <div class="flex items-center mt-auto">
-      <%= link_to edit_task_path(task), class: 'mr-2 text-blue-500' do %>
-        <%= image_tag("pencil.svg", alt: "Edit", class: "w-4 h-4") %>
-      <% end %>
-      <%= button_to task_path(task), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-red-500', data: { turbo: false } do %>
-        <%= image_tag("bin.svg", alt: "Delete", class: "w-4 h-4") %>
-      <% end %>
+<%= turbo_frame_tag "task_#{task.id}" do %>
+  <div class="w-full mb-4 transition-transform transform hover:scale-105">
+    <div class="flex items-center justify-between bg-gray-100 border p-4 rounded shadow h-full">
+      <div class="mb-4">
+        <%= link_to task_path(task), class: 'no-underline' do %>
+          <h3 class="text-lg text-sky-600 font-semibold"><%= task.name %></h3>
+        <% end %>
+        <p class="text-gray-600"><%= task.description %></p>
+      </div>
+      <div class="flex items-center">
+        <%= link_to edit_task_path(task), class: 'mr-2 text-blue-500', data: { turbo: true } do %>
+          <%= image_tag("pencil.svg", alt: "Edit", class: "w-4 h-4") %>
+        <% end %>
+        <%= button_to task_path(task), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-red-500', data: { turbo: true } do %>
+          <%= image_tag("bin.svg", alt: "Delete", class: "w-4 h-4") %>
+        <% end %>
+      </div>
     </div>
   </div>
-</div>
+<% end %>
