--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,15 +1,11 @@
 <!-- app/views/tasks/index.html.erb -->
-
 <div class="container mx-auto p-8">
-  <h1 class="text-3xl font-semibold mb-8">All Tasks</h1>
-
-  <div class="flex gap-3 flex-wrap">
-    <%= render partial: 'task', collection: @tasks, as: :task %>
-  </div>
-
-  <div class="mt-8">
-    <%= link_to new_task_path, class: 'inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600' do %>
-      New Task
-    <% end %>
+  <%= turbo_frame_tag "tasks" do %>
+    <div class="">
+      <%= render partial: 'task', collection: @tasks, as: :task %>
+    </div>
+  <%end%>
+  <div class="absolute bottom-0 left-0 right-0 mb-4">
+    <%= render partial: 'form', task: @task %>
   </div>
 </div>
